--- a/.github/sync-repo-settings.yaml
+++ b/.github/sync-repo-settings.yaml
@@ -5,7 +5,12 @@ branchProtectionRules:
   - pattern: main
     isAdminEnforced: true
     requiredStatusCheckContexts:
-      - unit-tests
+      - unit-tests (golang:1.11)
+      - unit-tests (golang:1.12)
+      - unit-tests (golang:1.13)
+      - unit-tests (golang:1.14)
+      - unit-tests (golang:1.15)
+      - unit-tests (golang:1.16)
       - lint
       - cla/google
     requiredApprovingReviewCount: 1
