yoshi-go-admins -> yoshi-go

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
 # @lukesneeringer originally wrote this.
 # The Yoshi/ACT folks have graciously agreed to help.
-* @lukesneeringer @googleapis/yoshi-go-admins @googleapis/actools-go
+* @lukesneeringer @googleapis/yoshi-go @googleapis/actools-go
