chore: renovate automerge and rebase when behind

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -3,4 +3,6 @@
   commitMessagePrefix: "chore: ",
   groupName: "all",
   postUpdateOptions: ["gomodTidy"],
+  rebaseWhen: "behind-base-branch",
+  labels: ["automerge"],
 }
