--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,21 +9,25 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        docker_image:
-          - golang:1.11
-          - golang:1.12
-          - golang:1.13
-          - golang:1.14
-          - golang:1.15
-          - golang:1.16
-    container: ${{ matrix.docker_image }}
+        go_version:
+          - "1.11"
+          - "1.12"
+          - "1.13"
+          - "1.14"
+          - "1.15"
+          - "1.16"
     steps:
+      - uses: actions/setup-go@v2
+        with:
+          go-version: ${{ matrix.go_version }}
       - uses: actions/checkout@v2
       - run: go test -p 1 ./...
   lint:
     runs-on: ubuntu-latest
-    container: golang:1.16
     steps:
+      - uses: actions/setup-go@v2
+        with:
+          go-version: "1.16"
       - uses: actions/checkout@v2
       - name: Install golangci-lint
         run: curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- -b $(go env GOPATH)/bin latest
