--- a/.github/sync-repo-settings.yaml
+++ b/.github/sync-repo-settings.yaml
@@ -11,7 +11,7 @@ branchProtectionRules:
       - ci / unit-tests (1.14)
       - ci / unit-tests (1.15)
       - ci / unit-tests (1.16)
-      - lint
+      - ci / lint
       - cla/google
     requiredApprovingReviewCount: 1
     requiresCodeOwnerReviews: true
