--- a/.github/sync-repo-settings.yaml
+++ b/.github/sync-repo-settings.yaml
@@ -5,13 +5,13 @@ branchProtectionRules:
   - pattern: main
     isAdminEnforced: true
     requiredStatusCheckContexts:
-      - ci / unit-tests (1.11) (pull_request)
-      - ci / unit-tests (1.12) (pull_request)
-      - ci / unit-tests (1.13) (pull_request)
-      - ci / unit-tests (1.14) (pull_request)
-      - ci / unit-tests (1.15) (pull_request)
-      - ci / unit-tests (1.16) (pull_request)
-      - ci / lint (pull_request)
+      - ci / unit-tests (1.11)
+      - ci / unit-tests (1.12)
+      - ci / unit-tests (1.13)
+      - ci / unit-tests (1.14)
+      - ci / unit-tests (1.15)
+      - ci / unit-tests (1.16)
+      - ci / lint
       - cla/google
     requiredApprovingReviewCount: 1
     requiresCodeOwnerReviews: true
