--- a/.github/sync-repo-settings.yaml
+++ b/.github/sync-repo-settings.yaml
@@ -5,13 +5,13 @@ branchProtectionRules:
   - pattern: main
     isAdminEnforced: true
     requiredStatusCheckContexts:
-      - ci / unit-tests (1.11)
-      - ci / unit-tests (1.12)
-      - ci / unit-tests (1.13)
-      - ci / unit-tests (1.14)
-      - ci / unit-tests (1.15)
-      - ci / unit-tests (1.16)
-      - ci / lint
+      - unit-tests (1.11)
+      - unit-tests (1.12)
+      - unit-tests (1.13)
+      - unit-tests (1.14)
+      - unit-tests (1.15)
+      - unit-tests (1.16)
+      - lint
       - cla/google
     requiredApprovingReviewCount: 1
     requiresCodeOwnerReviews: true
